# TTSS

./: .gitignore  dot_product.cpp
GaussSolve/: gauss_io.cpp  gauss_io.h  input.json  main.cpp  report.tex  solvers.cpp  solvers.h  standalone_gauss.cpp
JacobiSolve/: data.json  jacobi_benchmark.cpp  jacobi_io.cpp  jacobi_io.h  main.cpp  solvers.cpp  solvers.h
LinearEquationSolve/: CMakeLists.txt  README.md  dashboard.html  parallel.cpp  results_parallel.csv  results_sequential.csv  run_benchmark.sh  sequential.cpp  tasks.json
OpenCVPararell/: .gitignore  CMakeLists.txt  README.md  docs.md  package.sh  run.sh  run_parallel.sh  run_sequential.sh
OpenCVPararell/include/: Annotator.hpp  Config.hpp  CropAndWarp.hpp  ImageFileScanner.hpp  ImageProcessor.hpp  ImageProcessorSequential.hpp  ResultWriter.hpp  RoiDetector.hpp  Types.hpp
OpenCVPararell/samples/: paper-config.json
OpenCVPararell/scripts/: timing_common.sh
OpenCVPararell/src/: AnnotatedResultImage.cpp  AnnotatedResultImage.hpp  Annotator.cpp  Config.cpp  CropAndWarp.cpp  ImageFileScanner.cpp  ImageProcessor.cpp  ImageProcessorSequential.cpp  ResultWriter.cpp  RoiDetector.cpp  main.cpp  main_sequential.cpp
OpenCVPararell/src/RoiDetector/: Common.cpp  Common.hpp  PartOneTwo.cpp  PartOneTwo.hpp  PartThree.cpp  PartThree.hpp  StudentIdKey.cpp  StudentIdKey.hpp
Vector/: benchmark_results.json  benchmark_table.tex  dot_benchmark.cpp  efficiency_chart.tex  input.json  plot_results.py  speedup_chart.tex  vector_io.cpp  vector_io.h  vector_sum_openmp.cpp
gauss/: benchmark_report.md  data.json  gauss_benchmark.cpp  gauss_opt_test.cpp  gauss_optimization_notes.md  index.html  opt_data.json  output_1000.json  output_1600.json  test_block.cpp
report/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
report/chapters/: bibliography.tex  chapter1_vector.tex  chapter2_gauss.tex  conclusion.tex  intro.tex  titlepage.tex
report/chapters/gauss/: ch2_s1_theory.tex  ch2_s2_parallel.tex  ch2_s3_opt1.tex  ch2_s3_opt2.tex  ch2_s3_results.tex
report/chapters/jacobi/: ch3_s1_theory.tex  ch3_s2_parallel.tex  ch3_s3_results.tex  jacobi.tex
